--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-SEARCHBOX_KEY = access token from Search Box account
+SEARCHBOX_KEY = access token from Search Box account (https://docs.mapbox.com/api/search/search-box/)
 SESSION_KEY = some UUIDv4 identifier for development purposes
-OPENWEATHER_KEY = open weather api key from openweather account
+OPENWEATHER_KEY = open weather api key from openweather account (https://openweathermap.org/)
 APPLICATION_MODE = development or production (decides which session key to use to prevent generation of new ones for billing)
