--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "universal-cookie": "^4.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
